# ChangeLog for app-i18n/ibus-table-chinese
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/ibus-table-chinese/ChangeLog,v 1.2 2013/02/05 11:46:33 yngwin Exp $

*ibus-table-chinese-1.4.6 (05 Feb 2013)

  05 Feb 2013; Ben de Groot <yngwin@gentoo.org>
  +ibus-table-chinese-1.4.6.ebuild:
  version bump

*ibus-table-chinese-1.3.5 (21 Mar 2012)

  21 Mar 2012; Naohiro Aota <naota@gentoo.org> +ibus-table-chinese-1.3.5.ebuild,
  +metadata.xml:
  New ebuild written by Serguei Jidkov. Bug #390335