@@ -1,6 +1,25 @@
-DIST ibus-table-chinese-1.3.5-Source.tar.gz 10537554 SHA256 3102768eb55b717a7d5674658b941afe4872b9a7f921a08f260b141ecf272880 SHA512 2807e092897254b567f4ac3722e47755b31c72732b21a1fd3fe49d75fbfb962be537ec69a828ad447c6a1283a9cbd87a64a5aa319d233e30758c3953629fee97 WHIRLPOOL b89c45242db16e2ec1e74d3232f33483d02667844201e36ebbdb3f085c16e79f40993267e2512a1f162a0de478f1b2320a02458a71823abebf087acb11ca3d53
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST ibus-table-chinese-1.4.6-Source.tar.gz 7604868 SHA256 5e3422e59417e70e65cfd342cc3c0627a3b612b1405c493df0245a3841bd9386 SHA512 52a72c388ad287572ae334bb25537b6054f72ecdd641aa1c539b85a5e9a4cf97801ae38baa8ace1caabca95d845d2fb4156eb174ac7ad1c9123409749318d76d WHIRLPOOL bdfd4203fe8954bb02002bfa3868e67f9b1aebcf1a416cc281381601ac42020b98b344443889c7714ce456a171710f00b1f0c0f34f7eb42867a9da6382d7a174
-EBUILD ibus-table-chinese-1.3.5.ebuild 641 SHA256 6bff9d0f95bb4f1d464f158501c13661fff84feaeb698742ad303e0611a23002 SHA512 2f16b4dd3eb8aaa58aa045f51ec7ed95690cc0bcb144495c3a5bca930e125243f54fa6223bfa3638d426583b5460c6dc782f143d891ac95e34ae508ede72307a WHIRLPOOL 5004ab67e1d201a70bb52cd22be61552db4b976d82bf0a464ce26943f1ac8a5eed9274b9f6d87602474edaa66565e0e307b3586d7bfc67f08cd64f093332a251
 EBUILD ibus-table-chinese-1.4.6.ebuild 642 SHA256 265000df144446d302daa2ebd6ad196dd6bcc4854322c1a9df0bca74b48824c7 SHA512 016a5eb042dce0173cc85936be50e9544965896348328e40cbe579c91f91b517932ca31d87ed6668d36539284ab0ff25d24f3fa021d628a1bb778cc3e8510bf5 WHIRLPOOL 0eb818d7e31bb38fa1347a47e5c18ef47c3a7b4283ff963b59e61cedb78c10efb3a2815652dcc57388e06479d555ca2d58de186dc0aa54211d5ab41ebaf9f8f4
-MISC ChangeLog 559 SHA256 8db48fae946dc316241d3f548679dc024b912c157d05523f64b0727d9bebc72c SHA512 8844670c32f0cae101ea5d5c7cf6361678799bda688385b381cd0dfface8e51704effdb9a4914af6a356cfd807b2af5ab5ddcf4e279e0f04f1b23528bda5732b WHIRLPOOL 5348e11be083e94291bfbf502e141feb63f902e4a18dbc8b73906cac3f27c0f46b25ece2ed22fbe56b6d0e9c2b9c9abc64e72d61f6d6ceeb90e7d697f1d87df2
+MISC ChangeLog 670 SHA256 9dddc5226f8635f0b42323c2391e441d2272d6eb9873bcd0f3d5f3dcb0f48a47 SHA512 7610d5ae477cf08d5a44e079685959189decc8653b2be3161bc3bf942981d35603247d6075062c460a74231670e41c9a0e7bdf32efad436a44c6947e17a74698 WHIRLPOOL 035ad15f5c61c0968b4cff1886f9e0da4e8753cbc9c7f0788448735cc5df86344906d5c76155e23aa87499e1ac67a4af4c09d40ae19683415cf684d0be530b23
 MISC metadata.xml 292 SHA256 18abc778c6dc9f37d96cb53a46b78c61399b4bb3e834187950cef50770be6001 SHA512 3f27544d22f26ee572ed86b54ed728f12ac9efe68d434f14d5b2e79bdb9f9332e4510a0c14c2b1db3286dae3bb58de14e2d7b51008f88e2df7bed4d3f8ae00a1 WHIRLPOOL 7620bbde9ccc2f5a52634a145f690053b00bf6c593e1044a410783a2fa205dca4756a2ea4d637b8075f3bfecffea7452df0a427b1440f4e70a7eec917731f80f
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJiBAEBCABMBQJVIANFRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7BTrD/9cnMgdOCfcw6XUAOTfH2UMjIXGfPoyMU2Fj8FS3rbebbnywz5OvcEc6/D9
+T9MgD3EweV+zds9AJbhfn5R3SbNW2DR285IYEci0i+vypeQZNTlVOLKuFDeXeVZg
+5CD1XpKly91cZav3UaU56rd9sR2zUnfVuWilVuhtvEVO3EFkTaepKkgsH+vrgg9J
+TeFE7aIJTpIUt4ZOdozmcuewBXxuGcIkkuYsoMsKCivMzUT2FMgiqU19GpBS5UOu
+zPfiOk7+JOPDmVolMAtjOufFFr8E3lJhuBEPhocuf5QXuBvjEf4kM/qGA0CL43Ih
+hjUR0i7N1TjcvbgDHCg514AsyiWEpyTYwAgWbsY62SUyhhA8TcPQZaignvjmvqfg
+NtgHlJ91MiCLg3wRaymifVxnXDuYjfW6HJJSzNXIZADPyHmeGs/vzxGspCDp/GeD
+VCw4SCVJIeh8n8bpqvsdcbwqT8WsVZbOfINxkLF04XcyVA7XRwVVp+ebSZRUkdHv
+BvkRdpYla+0KZu+cU22jHqu5x8yHL49wCz3sTiWrIVQdGMsDIkeaKtl14dpOPzza
+BwuAqcFWMpzFoZUXW1yMDOPpqroniOqsRElyukH8ODK0yVxI+kUB8be7aCKzmqV7
+2YaAQ2EEDzi8YSBEaZZOWOnsFvReuTT9s91a1gMbg5hCL+hreg==
+=keq+
+-----END PGP SIGNATURE-----
