@@ -1,6 +1,10 @@
 # ChangeLog for app-i18n/ibus-table-chinese
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/ibus-table-chinese/ChangeLog,v 1.2 2013/02/05 11:46:33 yngwin Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/ibus-table-chinese/ChangeLog,v 1.3 2015/04/04 15:29:11 kensington Exp $
+
+  04 Apr 2015; Michael Palimaka <kensington@gentoo.org>
+  -ibus-table-chinese-1.3.5.ebuild:
+  Remove old.
 
 *ibus-table-chinese-1.4.6 (05 Feb 2013)
 
